now its drawing a circle

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body style="padding: 0;margin: 0;text-align: center;background: lightgrey;">
     <p style="padding: 0;margin: 0;">
-        <canvas id="canvas" width="600px" height="300px">
+        <canvas id="canvas">
             Browser doesnt support canvas tag
         </canvas>
     </p>
